# Concurrent-Matrix-Multiplication

./: .gitigonore  readme.md
Matrix Multiplication -Serial/: CMakeLists.txt  main.cpp
Matrix Multiplication-Parellel/: CMakeLists.txt  main.cpp
Matrix Multiplication-Parellel Optimized/: CMakeLists.txt  main.cpp
Submition/: execute.py  output.txt  parallel.cpp  parallel_op.cpp  serial.cpp
